# knob-radio

./: .gitignore  README.md
.github/workflows/: ci.yml  install-page.yml  phase-e.yml
components/pcm_link/: CMakeLists.txt
components/pcm_link/include/: cobs.h  control_msg.h  pcm_frame.h  pcm_link_proto.h  pcm_link_rx.h
components/pcm_link/src/: cobs.c  control_msg.c  pcm_frame.c  pcm_link_rx.c
docs/: prototype-plan.md
docs/JC3636K518CN_knob_EN/: User precautions.txt
docs/JC3636K518CN_knob_EN/1-Instructions/mjpeg Conversion tool V2.1/: mjpeg转换工具.deps.json
docs/JC3636K518CN_knob_EN/2-Program Example/Demo_Arduino/: lv_conf.h
docs/JC3636K518CN_knob_EN/2-Program Example/Demo_Arduino/ST77916_LVGL_DEMO/: Compilation instructions.txt  ST77916_LVGL_DEMO.ino  knob.c
docs/JC3636K518CN_knob_EN/2-Program Example/Demo_Arduino/ST77916_LVGL_IMG_DEMO/: ST77916_LVGL_DEMO_IMG.ino  knob.c  knob.h  scr_st77916.h
docs/JC3636K518CN_knob_EN/9-Burn/flash_download_tool_3.9.3/configure/esp32/: spi_download.conf
docs/JC3636K518CN_knob_EN/9-Burn/flash_download_tool_3.9.3/configure/esp32s3/: spi_download.conf
docs/JC3636K518CN_knob_EN/TF Card/aida64/: 001.mjpeg  002.mjpeg  004.mjpeg  005.mjpeg  007.mjpeg  008.mjpeg  009.mjpeg  00_ff0000.mjpeg  011.mjpeg  014.mjpeg  015.mjpeg  016.mjpeg  017.mjpeg
docs/JC3636K518CN_knob_EN/TF Card/clockbg/: Oronys.mjpeg  default_timer_bg.mjpeg  emoji_bg.mjpeg
docs/JC3636K518CN_knob_EN/TF Card/mjpeg/: 13.mjpeg  16.mjpeg  my1.mjpeg
docs/JC3636K518CN_knob_EN/TF Card/night7/: boot.mjpeg
docs/JC3636K518CN_knob_EN/TF Card/txt/: 使用说明.txt  第五回　活死人墓.sav  第五回　活死人墓.txt  第四十回　华山之巅.sav  第四十回　华山之巅.txt
docs/JC3636K518CN_knob_EN/TF Card/weather/: clear.mjpeg  cloudy_day.mjpeg  cloudy_night.mjpeg  fog_day.mjpeg  fog_night.mjpeg  hot.mjpeg  nowifi.mjpeg  partly_cloud.mjpeg  partly_cloud_night.mjpeg  partly_sunny.mjpeg  rain.mjpeg  rain_night.mjpeg  snow_day.mjpeg  snow_night.mjpeg  sunny.mjpeg  thunderstorm_day.mjpeg  thunderstorm_night.mjpeg  windy_day.mjpeg  windy_night.mjpeg
firmware/s3_sender/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/s3_sender/main/: CMakeLists.txt  Kconfig.projbuild  adf_pipeline.c  adf_pipeline.h  album_art.c  album_art.h  app_main.c  audio_output.c  audio_output.h  backpressure_rx.c  backpressure_rx.h  board_pins.h  dac_control.c  dac_control.h  display_st77916.c  display_st77916.h  encoder.c  encoder.h  haptic.c  haptic.h  i2c_bus.c  i2c_bus.h  idf_component.yml  lan_editor.c  lan_editor.h  pcm_source.c  pcm_source.h  podcast.c  podcast.h  podcast_parse.c  podcast_parse.h  portal.c  portal.h  power_sleep.c  power_sleep.h  provision_apply.c  provision_apply.h  provisioning_serial.c  provisioning_serial.h  schedule.c  (+15 more)
firmware/u4wdh_bridge/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/u4wdh_bridge/main/: CMakeLists.txt  a2dp_bridge.c  a2dp_bridge.h  app_main.c  backpressure.c  backpressure.h  dac_mute.c  dac_mute.h  jitter_buffer.c  jitter_buffer.h  link_tx.c  link_tx.h  uart_reader.c  uart_reader.h
test/host/: Makefile  test_jitter_buffer.c  test_pcm_link.c  test_podcast.c  test_schedule.c
web/: index.html  install.html
web/assets/: install.css  install.js  led-states.css  listener.css  listener.js  portal.css  preset.css  preset.js
web/portal/: bluetooth.html  portal.js  wifi.html
